--- a/application/admin/view/carmodel/lst.html
+++ b/application/admin/view/carmodel/lst.html
@@ -62,9 +62,7 @@
                                                 <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" aria-expanded="true">操作 <span class="caret"></span>
                                                 </button>
                                                 <ul class="dropdown-menu">
-                                                    <li><a href="">添加子品牌</a>
-                                                    </li>
-                                                    <li><a href="">修改</a>
+                                                    <li><a href="{:url('admin/carmodel/upd',array('id'=>$vo1.id))}">修改</a>
                                                     </li>
                                                     <li><a href="">删除</a>
                                                     </li>
