--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -38,7 +38,7 @@
                         <a class="J_menuItem" href="{:url('admin/carmodel/lst')}">车型管理</a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="graph_morris.html">Morris.js</a>
+                        <a class="J_menuItem" href="{:url('admin/level/lst')}">级别管理</a>
                     </li>
                     <li>
                         <a class="J_menuItem" href="graph_rickshaw.html">Rickshaw</a>
