--- a/application/index/view/member/memberbase.html
+++ b/application/index/view/member/memberbase.html
@@ -8,9 +8,7 @@
     {block name="header"}{include file='public/header'}{/block}
 </head>
 <body>
-    {block name="top"}{include file="public/top"}{/block}
-    {block name="headw"}{include file="public/headw"}{/block}
-    {block name="navlist"}{include file="public/navlist"}{/block}
+    {block name="userhead"}{include file="member/userhead"}{/block}
     {block name="main"}{/block}
     {block name="footer"}{include file="public/footer"}{/block}
 
